k8s-Manifests-files/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Use Let's Encrypt for TLS
spec:
  rules:
    - host: sujalsharma.in  # Replace with your domain
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todos-service
                port:
                  number: 5001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5173
  tls:
    - hosts:
        - sujalsharma.in  # Replace with your domain
      secretName: tls-secret  # Ensure TLS Secret is created
